[tool.poetry]
name = "tmn"
version = "0.0.1"
description = ""
readme = "README.md"
homepage = "https://tomochain.com"
repository = "https://github.com/tomochain/masternode"
documentation = "https://github.com/tomochain/masternode/blob/master/README.md"
keywords = ["tomochain", "blockchain", "masternode", "node"]
authors = [
  "Etienne Napoleone <etienne@tomochain.com>"
]

[tool.poetry.dependencies]
python = "^3.5"
click = "^6.7"
docker = "^3.4"
pytest = "^3.6"
pastel = "^0.1.0"
toml = "^0.9.4"

[tool.poetry.dev-dependencies]

codecov = "^2.0"
flake8 = "^3.5"

[tool.poetry.scripts]
tmn = "tmn.tmn:main"
