[tool.poetry]
name = "tmn"
version = "0.1.3"
description = "Quickstart your masternode"
readme = "README.md"
license = "GPL-3.0+"
homepage = "https://tomochain.com"
repository = "https://github.com/tomochain/masternode"
documentation = "https://github.com/tomochain/masternode/blob/master/README.md"
keywords = ["tomochain", "blockchain", "masternode", "node"]
authors = [
  "Etienne Napoleone <etienne@tomochain.com>"
]

[tool.poetry.dependencies]
python = "^3.5"
click = "^6.7"
docker = "^3.4"
pastel = "^0.1.0"
clint = "^0.5.1"
validators = "^0.12.2"

[tool.poetry.dev-dependencies]

flake8 = "^3.5"
coveralls = "^1.3"
pytest = "^3.6"

[tool.poetry.scripts]
tmn = "tmn.tmn:main"
