[tool.poetry]
name = "tmn"
version = "0.5.10"
description = "Quickstart your masternode"
readme = "README.md"
license = "GPL-3.0+"
homepage = "https://tomochain.com"
repository = "https://github.com/tomochain/tmn"
documentation = "https://docs.tomochain.com/masternode/tmn/"
keywords = ["tomochain", "blockchain", "masternode", "node"]
authors = [
  "Etienne Napoleone <etienne@tomochain.com>"
]

[tool.poetry.dependencies]
python = "^3.5"
docker = "^3.5.0"
pastel = "^0.1.0"
clint = "^0.5.1"
python-slugify = "^1.2"
click = "^7.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.5"
coveralls = "^1.3"
pytest = "^3.6"

[tool.poetry.scripts]
tmn = "tmn.tmn:main"
